--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>Welcome to Perspective Tensor | Perspective Tensor</title>
 <meta name="keywords" content="">
 <meta name="description" content="Welcome! This blog is all about my journey of lifelong learning and shifting perspectives. As an &ldquo;entropy warrior&rdquo;, I love finding order and meaning in the chaos. Dive in with me as I explore data science, AI, and career growth, using first principles to see the world in new ways.">
 <meta name="author" content="Lin Wang">
-<link rel="canonical" href="http://localhost:1313/about/">
+<link rel="canonical" href="https://entropy-warrior.github.io/about/">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.b609c58d5c11bb90b1a54e04005d74ad1ddf22165eb79f5533967e57df9c3b50.css" integrity="sha256-tgnFjVwRu5CxpU4EAF10rR3fIhZet59VM5Z&#43;V9&#43;cO1A=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
+<link rel="icon" href="https://entropy-warrior.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://entropy-warrior.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://entropy-warrior.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://entropy-warrior.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://entropy-warrior.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/about/index.xml">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/about/">
+<link rel="alternate" type="application/rss+xml" href="https://entropy-warrior.github.io/about/index.xml">
+<link rel="alternate" hreflang="en" href="https://entropy-warrior.github.io/about/">
 <noscript>
     <style>
         #theme-toggle,
@@ -58,6 +58,32 @@
 
     </style>
 </noscript>
+  
+
+<meta property="og:title" content="Welcome to Perspective Tensor" />
+<meta property="og:description" content="Documenting my evolving perspectives on a lifelong journey of learning." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://entropy-warrior.github.io/about/" />
+
+<meta name="twitter:card" content="summary"/>
+<meta name="twitter:title" content="Welcome to Perspective Tensor"/>
+<meta name="twitter:description" content="Documenting my evolving perspectives on a lifelong journey of learning."/>
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position":  1 ,
+      "name": "Welcome to Perspective Tensor",
+      "item": "https://entropy-warrior.github.io/about/"
+    }
+  ]
+}
+</script>
 </head>
 
 <body class="list" id="top">
@@ -75,7 +101,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="Perspective Tensor (Alt + H)">Perspective Tensor</a>
+            <a href="https://entropy-warrior.github.io/" accesskey="h" title="Perspective Tensor (Alt + H)">Perspective Tensor</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -101,17 +127,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/posts/" title="Posts">
+                <a href="https://entropy-warrior.github.io/posts/" title="Posts">
                     <span>Posts</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/search/" title="Search">
+                <a href="https://entropy-warrior.github.io/search/" title="Search">
                     <span>Search</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/about/" title="About">
+                <a href="https://entropy-warrior.github.io/about/" title="About">
                     <span class="active">About</span>
                 </a>
             </li>
@@ -130,7 +156,7 @@
     </nav>
 </header>
 <main class="main"> 
-<header class="page-header"><div class="breadcrumbs"><a href="http://localhost:1313/">Home</a></div>
+<header class="page-header"><div class="breadcrumbs"><a href="https://entropy-warrior.github.io/">Home</a></div>
   <h1>
     Welcome to Perspective Tensor
   </h1>
@@ -142,7 +168,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="http://localhost:1313/">Perspective Tensor</a></span> · 
+        <span>&copy; 2024 <a href="https://entropy-warrior.github.io/">Perspective Tensor</a></span> · 
 
     <span>
         Powered by
