--- a/public/about/index.html
+++ b/public/about/index.html
@@ -132,6 +132,11 @@
                 </a>
             </li>
             <li>
+                <a href="https://entropy-warrior.github.io/codes/" title="Codes">
+                    <span>Codes</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://entropy-warrior.github.io/about/" title="About">
                     <span class="active">About</span>
                 </a>
