--- a/public/404.html
+++ b/public/404.html
@@ -116,6 +116,11 @@
                 </a>
             </li>
             <li>
+                <a href="https://entropy-warrior.github.io/codes/" title="Codes">
+                    <span>Codes</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://entropy-warrior.github.io/about/" title="About">
                     <span>About</span>
                 </a>
